<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_padding_10dp"
    android:paddingRight="@dimen/margin_padding_20dp"
    android:paddingTop="@dimen/margin_padding_20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/underlined"
            android:text="@string/loan_details"
            android:textColor="@color/black"
            android:textSize="@dimen/space_60"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/textv_loan_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_40dp"
                android:layout_marginTop="@dimen/margin_padding_04dp"
                android:layout_weight="0.7"
                android:gravity="right"
                android:text="@string/loan_type"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_loan_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_20dp"
                android:layout_marginLeft="@dimen/margin_padding_10dp"
                android:layout_marginTop="@dimen/margin_padding_05dp"
                android:layout_toEndOf="@+id/textv_loan_type"
                android:background="@drawable/background_editext"
                android:drawableEnd="@drawable/ic_down_2"
                android:paddingLeft="@dimen/margin_padding_05dp"
                android:textSize="@dimen/margin_padding_15dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_10dp">

            <TextView
                android:id="@+id/tv_loan_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_20dp"
                android:layout_marginTop="@dimen/margin_padding_03dp"
                android:layout_weight="0.7"
                android:gravity="right"
                android:text="@string/loan_amount"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_loan_amount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_20dp"
                android:layout_marginLeft="@dimen/margin_padding_12dp"
                android:layout_toEndOf="@+id/tv_loan_amount"
                android:background="@drawable/background_editext"
                android:inputType="number"
                android:paddingLeft="@dimen/margin_padding_05dp"
                android:textSize="@dimen/margin_padding_15dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_10dp">

            <TextView
                android:id="@+id/tv_loan_tenure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="right"
                android:text="@string/tenure"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_tenure"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_20dp"
                android:layout_marginLeft="@dimen/margin_padding_12dp"
                android:layout_toEndOf="@+id/tv_loan_tenure"
                android:background="@drawable/background_editext"
                android:drawableEnd="@drawable/ic_down_2"
                android:paddingLeft="@dimen/margin_padding_05dp"
                android:textSize="@dimen/margin_padding_15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_10dp">

            <TextView
                android:id="@+id/textv_loan_purpose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_18dp"
                android:layout_weight="0.7"
                android:gravity="right"
                android:text="@string/loan_purpose"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_loan_purpose"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_20dp"
                android:layout_marginLeft="@dimen/margin_padding_12dp"
                android:layout_toEndOf="@+id/textv_loan_purpose"
                android:background="@drawable/background_editext"
                android:drawableEnd="@drawable/ic_down_2"
                android:paddingLeft="@dimen/margin_padding_05dp"
                android:textSize="@dimen/margin_padding_15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_10dp">

            <TextView
                android:id="@+id/tv_max_interset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_20dp"
                android:layout_weight="0.7"
                android:gravity="right"
                android:text="@string/max_interster"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_max_interset"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_20dp"
                android:layout_marginLeft="@dimen/margin_padding_14dp"
                android:layout_toEndOf="@+id/tv_max_interset"
                android:background="@drawable/background_editext"
                android:inputType="number"
                android:paddingLeft="@dimen/margin_padding_05dp"
                android:textSize="@dimen/margin_padding_15dp" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/margin_padding_20dp"
            android:background="@drawable/underlined"
            android:text="@string/monthly_payments"
            android:textColor="@color/black"
            android:textSize="@dimen/space_60"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_10dp">

            <TextView
                android:id="@+id/tv_monthly_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="right"
                android:text="@string/monthly_payment"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_mini_small_13sp" />

            <EditText
                android:id="@+id/et_monthly_payment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_20dp"
                android:layout_marginLeft="@dimen/margin_padding_14dp"
                android:layout_toEndOf="@+id/tv_monthly_payment"
                android:background="@drawable/background_editext"
                android:inputType="number"
                android:paddingLeft="@dimen/margin_padding_05dp"
                android:textSize="@dimen/margin_padding_15dp" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_padding_20dp">

        <Button
            android:id="@+id/btn_back_loan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back" />

        <Button
            android:id="@+id/btn_next_loan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/button_next" />
    </RelativeLayout>
</RelativeLayout>