<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/margin_padding_10dp"
    android:paddingRight="@dimen/margin_padding_20dp"
    android:paddingTop="@dimen/margin_padding_20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/underlined"
            android:text="@string/personal_information"
            android:textColor="@color/black"
            android:textSize="@dimen/space_60"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin_padding_65dp"
                android:layout_weight="0.7"
                android:gravity="right"
                android:text="@string/personal_name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_20dp"
                android:layout_marginLeft="@dimen/margin_padding_07dp"
                android:layout_marginTop="@dimen/margin_padding_05dp"
                android:layout_toEndOf="@+id/tv_name"
                android:background="@drawable/background_border_editext"
                android:inputType="textPersonName"
                android:paddingLeft="@dimen/margin_padding_05dp"
                android:textSize="@dimen/margin_padding_15dp">

            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_10dp">

            <TextView
                android:id="@+id/textv_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_22dp"
                android:layout_marginTop="@dimen/margin_padding_03dp"
                android:layout_weight="0.7"
                android:gravity="right"
                android:text="@string/personal_birth"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_birth"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_20dp"
                android:layout_marginLeft="@dimen/margin_padding_10dp"
                android:layout_toEndOf="@+id/textv_birth"
                android:background="@drawable/background_border_editext"
                android:drawableEnd="@drawable/ic_down_2"
                android:paddingLeft="@dimen/margin_padding_05dp"
                android:textSize="@dimen/margin_padding_15dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_10dp">

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_88dp"
                android:layout_weight="0.7"
                android:gravity="right"
                android:text="@string/personal_id"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_20dp"
                android:layout_marginLeft="@dimen/margin_padding_09dp"
                android:layout_toEndOf="@+id/tv_id"
                android:background="@drawable/background_border_editext"
                android:inputType="phone"
                android:paddingLeft="@dimen/margin_padding_05dp"
                android:textSize="@dimen/margin_padding_15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_10dp">

            <TextView
                android:id="@+id/textv_issue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_19dp"
                android:layout_weight="0.7"
                android:gravity="right"
                android:text="@string/personal_issue"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_issue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_20dp"
                android:layout_marginLeft="@dimen/margin_padding_09dp"
                android:layout_toEndOf="@+id/textv_issue"
                android:background="@drawable/background_border_editext"
                android:drawableEnd="@drawable/ic_down_2"
                android:paddingLeft="@dimen/margin_padding_05dp"
                android:textSize="@dimen/margin_padding_15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_10dp">

            <TextView
                android:id="@+id/textv_education"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_39dp"
                android:layout_weight="0.7"
                android:gravity="right"
                android:text="@string/personal_education"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_education"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_20dp"
                android:layout_marginLeft="@dimen/margin_padding_09dp"
                android:layout_toEndOf="@+id/textv_education"
                android:background="@drawable/background_border_editext"
                android:drawableEnd="@drawable/ic_down_2"
                android:paddingLeft="@dimen/margin_padding_05dp"
                android:textSize="@dimen/margin_padding_15dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_10dp">

            <TextView
                android:id="@+id/textv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_78dp"
                android:layout_weight="0.7"
                android:gravity="right"
                android:text="@string/personal_sex"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_20dp"
                android:layout_marginLeft="@dimen/margin_padding_11dp"
                android:layout_toEndOf="@+id/textv_sex"
                android:background="@drawable/background_border_editext"
                android:drawableEnd="@drawable/ic_down_2"
                android:paddingLeft="@dimen/margin_padding_05dp"
                android:textSize="@dimen/margin_padding_15dp" />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/margin_padding_20dp"
            android:background="@drawable/underlined"
            android:text="@string/monthly_payments"
            android:textColor="@color/black"
            android:textSize="@dimen/space_60"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_10dp">

            <TextView
                android:id="@+id/textv_married"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_17dp"
                android:layout_weight="0.7"
                android:gravity="right"
                android:text="@string/personal_married"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_mini_small_13sp" />

            <TextView
                android:id="@+id/tv_married"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_20dp"
                android:layout_marginLeft="@dimen/margin_padding_10dp"
                android:layout_toEndOf="@+id/textv_married"
                android:background="@drawable/background_border_editext"
                android:drawableEnd="@drawable/ic_down_2"
                android:paddingLeft="@dimen/margin_padding_05dp"
                android:textSize="@dimen/margin_padding_15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_10dp">

            <TextView
                android:id="@+id/textv_childern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding_21dp"
                android:layout_weight="0.7"
                android:gravity="right"
                android:text="@string/personal_children"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_mini_small_13sp" />

            <TextView
                android:id="@+id/tv_children"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_padding_20dp"
                android:layout_marginLeft="@dimen/margin_padding_10dp"
                android:layout_toEndOf="@+id/textv_childern"
                android:background="@drawable/background_border_editext"
                android:drawableEnd="@drawable/ic_down_2"
                android:paddingLeft="@dimen/margin_padding_05dp"
                android:textSize="@dimen/margin_padding_15dp" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_padding_20dp">

        <Button
            android:id="@+id/btn_back_loan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back" />

        <Button
            android:id="@+id/btn_next_loan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/button_next" />
    </RelativeLayout>
</RelativeLayout>